v16.2/interfaces/GC.Spread.Sheets.Sparklines.ISparklineSetting.md
# Interface: ISparklineSetting

[Sheets](../modules/GC.Spread.Sheets.md).[Sparklines](../modules/GC.Spread.Sheets.Sparklines.md).ISparklineSetting

## Table of contents

### Properties

- [axisColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#axiscolor)
- [displayEmptyCellsAs](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#displayemptycellsas)
- [displayHidden](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#displayhidden)
- [displayXAxis](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#displayxaxis)
- [firstMarkerColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#firstmarkercolor)
- [groupMaxValue](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#groupmaxvalue)
- [groupMinValue](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#groupminvalue)
- [highMarkerColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#highmarkercolor)
- [lastMarkerColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#lastmarkercolor)
- [lineWeight](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#lineweight)
- [lowMarkerColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#lowmarkercolor)
- [manualMax](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#manualmax)
- [manualMin](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#manualmin)
- [markersColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#markerscolor)
- [maxAxisType](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#maxaxistype)
- [minAxisType](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#minaxistype)
- [negativeColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#negativecolor)
- [rightToLeft](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#righttoleft)
- [seriesColor](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#seriescolor)
- [showFirst](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#showfirst)
- [showHigh](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#showhigh)
- [showLast](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#showlast)
- [showLow](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#showlow)
- [showMarkers](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#showmarkers)
- [showNegative](GC.Spread.Sheets.Sparklines.ISparklineSetting.md#shownegative)

## Properties

### <a id="axiscolor" name="axiscolor"></a> axisColor

• `Optional` **axisColor**: `string`

___

### <a id="displayemptycellsas" name="displayemptycellsas"></a> displayEmptyCellsAs

• `Optional` **displayEmptyCellsAs**: [`EmptyValueStyle`](../enums/GC.Spread.Sheets.Sparklines.EmptyValueStyle.md)

___

### <a id="displayhidden" name="displayhidden"></a> displayHidden

• `Optional` **displayHidden**: `boolean`

___

### <a id="displayxaxis" name="displayxaxis"></a> displayXAxis

• `Optional` **displayXAxis**: `boolean`

___

### <a id="firstmarkercolor" name="firstmarkercolor"></a> firstMarkerColor

• `Optional` **firstMarkerColor**: `string`

___

### <a id="groupmaxvalue" name="groupmaxvalue"></a> groupMaxValue

• `Optional` **groupMaxValue**: `number`

___

### <a id="groupminvalue" name="groupminvalue"></a> groupMinValue

• `Optional` **groupMinValue**: `number`

___

### <a id="highmarkercolor" name="highmarkercolor"></a> highMarkerColor

• `Optional` **highMarkerColor**: `string`

___

### <a id="lastmarkercolor" name="lastmarkercolor"></a> lastMarkerColor

• `Optional` **lastMarkerColor**: `string`

___

### <a id="lineweight" name="lineweight"></a> lineWeight

• `Optional` **lineWeight**: `number`

___

### <a id="lowmarkercolor" name="lowmarkercolor"></a> lowMarkerColor

• `Optional` **lowMarkerColor**: `string`

___

### <a id="manualmax" name="manualmax"></a> manualMax

• `Optional` **manualMax**: `number`

___

### <a id="manualmin" name="manualmin"></a> manualMin

• `Optional` **manualMin**: `number`

___

### <a id="markerscolor" name="markerscolor"></a> markersColor

• `Optional` **markersColor**: `string`

___

### <a id="maxaxistype" name="maxaxistype"></a> maxAxisType

• `Optional` **maxAxisType**: [`SparklineAxisMinMax`](../enums/GC.Spread.Sheets.Sparklines.SparklineAxisMinMax.md)

___

### <a id="minaxistype" name="minaxistype"></a> minAxisType

• `Optional` **minAxisType**: [`SparklineAxisMinMax`](../enums/GC.Spread.Sheets.Sparklines.SparklineAxisMinMax.md)

___

### <a id="negativecolor" name="negativecolor"></a> negativeColor

• `Optional` **negativeColor**: `string`

___

### <a id="righttoleft" name="righttoleft"></a> rightToLeft

• `Optional` **rightToLeft**: `boolean`

___

### <a id="seriescolor" name="seriescolor"></a> seriesColor

• `Optional` **seriesColor**: `string`

___

### <a id="showfirst" name="showfirst"></a> showFirst

• `Optional` **showFirst**: `boolean`

___

### <a id="showhigh" name="showhigh"></a> showHigh

• `Optional` **showHigh**: `boolean`

___

### <a id="showlast" name="showlast"></a> showLast

• `Optional` **showLast**: `boolean`

___

### <a id="showlow" name="showlow"></a> showLow

• `Optional` **showLow**: `boolean`

___

### <a id="showmarkers" name="showmarkers"></a> showMarkers

• `Optional` **showMarkers**: `boolean`

___

### <a id="shownegative" name="shownegative"></a> showNegative

• `Optional` **showNegative**: `boolean`
